fix: make background less dark in dark mode

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -19,21 +19,23 @@
     --border: hsl(0, 0%, 60%);
     --blue-gradient: linear-gradient(to right, var(--dark-blue), var(--blue));
     --accent: hsl(212, 91%, 60%);
+    --visited: hsl(270, 60%, 60%);
     --header: hsl(212, 90%, 18%);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --blue-gradient: linear-gradient(to right, var(--black), var(--dark-blue));
-        --background: hsl(0, 0%, 10%);
+        --background: hsl(199, 10%, 22%);
         --border: hsl(0, 0%, 40%);
-        --code-background: hsl(0, 0%, 18%);
-        --button-background: hsl(0, 0%, 20%);
+        --code-background: hsl(0, 0%, 8%);
+        --button-background: hsl(0, 0%, 15%);
         --code-border: #0e0e0e;
         --text: hsl(0, 0%, 100%);
         --xrcf-title: #d1cdcd;
         --header: hsl(0, 0%, 100%);
         --accent: hsl(212, 91%, 65%);
+        --visited: hsl(270, 60%, 70%);
     }
 }
 
@@ -65,7 +67,7 @@ a {
 }
 
 a:visited {
-    color: hsl(270, 60%, 60%);
+    color: var(--visited);
 }
 
 li {
@@ -80,8 +82,8 @@ li p {
 code {
     background-color: var(--code-background);
     border-radius: var(--radius);
-    padding: 0.15rem;
-    font-size: 0.93em;
+    padding: 0.2rem;
+    font-size: 0.9em;
 }
 
 pre code {
